# rust-azure-ai-demos

./: .env  Cargo.toml  README.md
src/: IMG_6704 2025-04-21 09_15_36.JPG:Zone.Identifier  main.rs
src/onnx_model/: cvexport.manifest
