[profile.dev]
debug=true

[package]
name = "rust-azure-ai-demos"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0"
ndarray = { version = "0.15.6", features = ["serde"]}
ort = { version = "1", features = [ "load-dynamic" ] }
reqwest = { version = "0", features = ["json"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0"
